--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ivan.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ivan Cozar porfolio</title>
+    <meta name="description" content="Ivan Cozar porfolio" />
+    <meta name="keywords" content="Ivan Cozar porfolio" />
+    <meta name="author" content="Crezty" />
   </head>
   <body>
     <div id="root"></div>
